# hospital-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  models.py  tasks.py
grader/: grader.py
scripts/: run_inference.py
server/: app.py
tasks/easy/: grader.py
tasks/hard/: grader.py
tasks/medium/: grader.py
