[project]
name = "hospital-openenv"
version = "0.1.0"
description = "AI Hospital Triage OpenEnv Environment"
authors = [
    { name="Your Name" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"