[project]
name = "hospital-openenv"
version = "0.1.0"
description = "AI Hospital Triage OpenEnv"
authors = [{name="Your Name"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
